@@ -2220,71 +2220,6 @@ size_t get_statusbar_page_start(size_t start_col, size_t column)
 		start_col - 1);
 }
 
-/* Return the placewewant associated with current_x, i.e, the zero-based
- * column position of the cursor.  The value will be no smaller than
- * current_x. */
-size_t xplustabs(void)
-{
-    return strnlenpt(openfile->current->data, openfile->current_x);
-}
-
-/* actual_x() gives the index in str of the character displayed at
- * column xplus.  That is, actual_x() is the largest value such that
- * strnlenpt(str, actual_x(str, xplus)) <= xplus. */
-size_t actual_x(const char *str, size_t xplus)
-{
-    size_t i = 0;
-	/* The position in str, returned. */
-    size_t length = 0;
-	/* The screen display width to str[i]. */
-
-    assert(str != NULL);
-
-    while (*str != '\0') {
-	int str_len = parse_mbchar(str, NULL, &length);
-
-	if (length > xplus)
-	    break;
-
-	i += str_len;
-	str += str_len;
-    }
-
-    return i;
-}
-
-/* A strlen() with tabs factored in, similar to xplustabs().  How many
- * columns wide are the first size characters of str? */
-size_t strnlenpt(const char *str, size_t size)
-{
-    size_t length = 0;
-	/* The screen display width to str[i]. */
-
-    if (size == 0)
-	return 0;
-
-    assert(str != NULL);
-
-    while (*str != '\0') {
-	int str_len = parse_mbchar(str, NULL, &length);
-
-	str += str_len;
-
-	if (size <= str_len)
-	    break;
-
-	size -= str_len;
-    }
-
-    return length;
-}
-
-/* How many columns wide is buf? */
-size_t strlenpt(const char *buf)
-{
-    return strnlenpt(buf, (size_t)-1);
-}
-
 /* Move to (x, y) in win, and display a line of n spaces with the
  * current attributes. */
 void blank_line(WINDOW *win, int y, int x, int n)
