@@ -15,6 +15,8 @@ CVS code -
 	  that make use of a smaller number.  Changes to window_init(),
 	  nanoget_repaint(), titlebar(), statusbar(), and
 	  get_page_start(). (DLR)
+	- Move xplustabs(), actual_x(), strnlenpt(), and strlenpt() from
+	  winio.c to utils.c, as they're really utility functions. (DLR)
 - nano.h:
 	- Readd MIN_EDITOR_COLS #define. (DLR)
 - winio.c:
